--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -30,10 +30,6 @@
 }
 .header {  
   .svg_master_container {
-    // @keyframes galaxyRotate {
-    //   0% { background-position: 0 0 }
-    //   100% { background-position: -10000000000% 0 }
-    // }
     > div {
       height: 54.1%;
       row-gap: 2.7%;
@@ -49,8 +45,23 @@
       height: 100%;
       width: clamp(250px, 70vh, 40vw);
     }
+    @media (max-height: 575px) {
+      img {
+        width: 100%;
+      }
+    }
+    @media (min-width: 1024px) {
+      img {
+        width: clamp(475px, 70vh, 40vw);
+      }
+    }
     @media (max-width: 639px) {
       img { width: 100% }
+    }
+  }
+  @media (max-height: 675px) {
+    .svg_master_container {
+      margin-top: 2rem;
     }
   }
   .rainbow_button {
