--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -119,13 +119,13 @@
     100% { background-position: 200% 50% }
   }
 }
-.dark > .body > div:first-of-type {
+.dark .body > div:first-of-type {
   background: url(/images/home/darkgalaxy.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
-.light > .body > div:first-of-type {
+.light .body > div:first-of-type {
   background: url(/images/home/AdobeStock_121270629.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
@@ -145,12 +145,12 @@
 }
 .card_scroll {
   &::-webkit-scrollbar {
-    width: 12.5px;
-    height: 12.5px;
+    width: 10px;
+    height: 10px;
   }
-  &::-webkit-scrollbar-thumb { border-radius: 6.25px }
+  &::-webkit-scrollbar-thumb { border-radius: 5px }
   &::-webkit-scrollbar-track {
-    border-radius: 6.25px;
+    border-radius: 5px;
     object-fit: fill;
   }
   &::-webkit-scrollbar-corner { background-color: rgba(0, 0, 0, 0) }
@@ -165,6 +165,12 @@
   @media (min-width: 640px) {
     &::-webkit-scrollbar-button:start:increment { width: 25% }
     &::-webkit-scrollbar-button:end:increment { width: 25% }
+  }
+  @media (max-width: 768px) {
+    &::-webkit-scrollbar {
+      width: 6px;
+      height: 6px;
+    }
   }
   @media (min-width: 768px) {
     &::-webkit-scrollbar-button:start:increment { width: 30% }
