--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,187 +1,12 @@
-@keyframes slideLeft {
-  0% { background-position-x: 0 }
-  100% { background-position-x: -10000000000% }
-}
-.dark > .header {
-  > div:first-of-type {
-    background: url(/images/home/darkgalaxy.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: right;
-  }
-  .svg_master_container > div div {
-    background: url("/images/home/Purple Nebula 4.1 - 1024x1024.png") repeat fixed;
-    background-size: 40vw 40vw;
-    animation: slideLeft 50000000000s infinite linear;
-  }
-}
-.light > .header {
-  > div:first-of-type {
-    background: url(/images/home/AdobeStock_121270629.jpeg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: bottom;
-  }
-  .svg_master_container > div div {
-    background: url("/images/home/AdobeStock_253500845.jpg") repeat fixed;
-    background-size: 55vw 55vw;
-    animation: slideLeft 5000000000s infinite linear;
-  }
-}
-.header {  
-  .svg_master_container {
-    > div {
-      height: 54.1%;
-      row-gap: 2.7%;
-      width: 57.7%;
-      column-gap: 2.5%;
-      margin-left: 3.7%;
-      div {
-        box-shadow: 0 0 3px rgba(0, 0, 0, .5);
-        border-radius: 2px;
-      }
-    }
-    img {
-      height: 100%;
-      width: clamp(250px, 70vh, 40vw);
-    }
-    @media (max-height: 575px) {
-      img {
-        width: 100%;
-      }
-    }
-    @media (min-width: 2048px) {
-      img {
-        width: 819.2px !important;
-      }
-    }
-    @media (min-width: 1024px) {
-      img {
-        width: clamp(475px, 70vh, 40vw);
-      }
-    }
-    @media (max-width: 639px) {
-      img { width: 100% }
-    }
-  }
-  @media (max-height: 675px) {
-    .svg_master_container {
-      margin-top: 2rem;
-    }
-  }
-  .rainbow_button {
-    position: relative;
-    text-transform: uppercase;
-    border-radius: 4px;
-    z-index: 1;
-    &:before {
-      content: "";
-      position: absolute;
-      animation: rainbow-border 1.5s linear infinite;
-      border-radius: 4px;
-      background: linear-gradient(
-        70deg,
-        #0ebeff,
-        #ffdd40,
-        #ae63e4,
-        #47cf73,
-        #0ebeff,
-        #ffdd40,
-        #ae63e4,
-        #47cf73
-      );
-      width: 100%;
-      height: 100%;
-      top: 0;
-      left: 0;
-      z-index: -1;
-      background-size: 200% 200%;
-    }
-    &:before { bottom: 0 }
-    &:after {
-      content: "";
-      position: absolute;
-      bottom: 0;
-      top: 0;
-      left: 0;
-      right: 0;
-      height: auto;
-      width: auto;
-      z-index: -1;
-      border-radius: 3px;
-      margin: 03px;
-      background: inherit;
-    }
-  }
-  @keyframes rainbow-border {
-    0% { background-position: 0% 50% }
-    50% { background-position: 100% 50% }
-    100% { background-position: 200% 50% }
-  }
-}
-
-
-
-
-.dark .body > div:first-of-type {
+.dark {
   background: url(/images/home/darkgalaxy.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
 }
-.light .body > div:first-of-type {
+.light {
   background: url(/images/home/AdobeStock_121270629.jpeg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: left;
-}
-.section2_light {
-  background: url(/images/home/AdobeStock_121270629.jpeg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: left;
-}
-.section2_dark {
-  background: url(/images/home/darkgalaxy.jpeg);
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-.card_scroll {
-  &::-webkit-scrollbar {
-    width: 10px;
-    height: 10px;
-  }
-  &::-webkit-scrollbar-thumb { border-radius: 5px }
-  &::-webkit-scrollbar-track {
-    border-radius: 5px;
-    object-fit: fill;
-  }
-  &::-webkit-scrollbar-corner { background-color: rgba(0, 0, 0, 0) }
-  @media (max-width: 425px) {
-    &::-webkit-scrollbar-button:start:increment { width: 10% }
-    &::-webkit-scrollbar-button:end:increment { width: 10% }
-  }
-  @media (min-width: 425px) {
-    &::-webkit-scrollbar-button:start:increment { width: 20% }
-    &::-webkit-scrollbar-button:end:increment { width: 20% }
-  }
-  @media (min-width: 640px) {
-    &::-webkit-scrollbar-button:start:increment { width: 25% }
-    &::-webkit-scrollbar-button:end:increment { width: 25% }
-  }
-  @media (max-width: 768px) {
-    &::-webkit-scrollbar {
-      width: 6px;
-      height: 6px;
-    }
-  }
-  @media (min-width: 768px) {
-    &::-webkit-scrollbar-button:start:increment { width: 30% }
-    &::-webkit-scrollbar-button:end:increment { width: 30% }
-  }
-  @media (min-width: 1024px) {
-    &::-webkit-scrollbar-button:start:increment { width: 35%}
-    &::-webkit-scrollbar-button:end:increment { width: 35% }
-  }
 }
